--- a/apps/auth-service/tsconfig.app.json
+++ b/apps/auth-service/tsconfig.app.json
@@ -5,11 +5,11 @@
     "types": [
       "node"
     ],
-    "rootDir": "src",
+    "rootDir": "../../",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts", "../../packages/**/*.ts"
   ],
   "exclude": [
     "out-tsc",
