--- a/package.json
+++ b/package.json
@@ -2,33 +2,62 @@
   "name": "@./source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "npx nx run-many --target=serve --all"
+  },
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.21.2"
+    "@prisma/client": "^6.10.1",
+    "axios": "^1.10.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
+    "ioredis": "^5.6.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
+    "prisma": "^6.10.1",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nx/esbuild": "20.8.2",
+    "@nx/express": "^20.8.2",
     "@nx/jest": "20.8.2",
     "@nx/js": "20.8.2",
     "@nx/node": "20.8.2",
+    "@nx/web": "20.8.2",
+    "@nx/webpack": "20.8.2",
     "@nx/workspace": "20.8.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.36",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/express-http-proxy": "^1.6.6",
     "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.10",
     "@types/node": "~18.16.9",
+    "@types/nodemailer": "^6.4.17",
+    "@types/swagger-ui-express": "^4.1.8",
     "esbuild": "^0.19.2",
+    "express-http-proxy": "^2.1.1",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "nx": "20.8.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
     "apps/*"
