fixed-swagger-module-not-found-issue

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REDIS_PORT="6379"
 REDIS_PASSWORD="AaEHAAIjcDFkMTA2Y2M3YjBiYzQ0NmViYWFhNTQ1OWIxYWFjODUxZXAxMA"
 
 SMTP_USER="yuvrajpatil12092004@gmail.com"
-SMTP_PASS="lsgy pkar yglo mzog"
+SMTP_PASS="swpa gcid pfem ulhj"
 SMTP_PORT=465
 SMTP_SERVICE=gmail
 SMTP_HOST=smtp.gamil.com
