--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -5,12 +5,21 @@
   "nx": {
     "name": "auth-service",
     "targets": {
+      "swagger-generate": {
+        "executor": "nx:run-commands",
+        "options": {
+          "command": "cd apps/auth-service/src && node swagger.js"
+        }
+      },
       "build": {
         "executor": "@nx/esbuild:esbuild",
         "outputs": [
           "{options.outputPath}"
         ],
         "defaultConfiguration": "production",
+        "dependsOn": [
+          "swagger-generate"
+        ],
         "options": {
           "platform": "node",
           "outputPath": "apps/auth-service/dist",
@@ -20,7 +29,13 @@
           "bundle": false,
           "main": "apps/auth-service/src/main.ts",
           "tsConfig": "apps/auth-service/tsconfig.app.json",
-          "assets": [],
+          "assets": [
+            {
+              "input": "apps/auth-service/src",
+              "glob": "swagger-output.json",
+              "output": "."
+            }
+          ],
           "esbuildOptions": {
             "sourcemap": true,
             "outExtension": {
@@ -29,9 +44,16 @@
           }
         },
         "configurations": {
-          "development": {},
+          "development": {
+            "dependsOn": [
+              "swagger-generate"
+            ]
+          },
           "production": {
             "generateLockfile": true,
+            "dependsOn": [
+              "swagger-generate"
+            ],
             "esbuildOptions": {
               "sourcemap": false,
               "outExtension": {
