--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ SMTP_SERVICE=gmail
 SMTP_HOST=smtp.gamil.com
 
 REDIS_DATABASE_URI="rediss://default:AaEHAAIjcDFkMTA2Y2M3YjBiYzQ0NmViYWFhNTQ1OWIxYWFjODUxZXAxMA@internal-chamois-41223.upstash.io:6379"
+
+ACCESS_TOKEN_SECRET="8688a93c"
+REFRESH_TOKEN_SECRET="9454bf28"
