--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -8,7 +8,7 @@
       "swagger-generate": {
         "executor": "nx:run-commands",
         "options": {
-          "command": "cd apps/auth-service/src && node swagger.js"
+          "command": "cd apps/auth-service/src"
         }
       },
       "build": {
