--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "npx nx run-many --target=serve --all"
+    "dev": "npx nx run-many --target=serve --all ",
+    "auth-docs": "node apps/auth-service/src/swagger.js"
   },
   "private": true,
   "dependencies": {
     "@prisma/client": "^6.10.1",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
@@ -16,6 +18,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "prisma": "^6.10.1",
@@ -43,14 +46,17 @@
     "@types/express": "^4.17.21",
     "@types/express-http-proxy": "^1.6.6",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "~18.16.9",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
     "esbuild": "^0.19.2",
     "express-http-proxy": "^2.1.1",
+    "i": "^0.3.7",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "npm": "^11.4.2",
     "nx": "20.8.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
