done-with-userui-login-page

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "npx nx run-many --target=serve --all ",
-    "auth-docs": "node apps/auth-service/src/swagger.js"
+    "auth-docs": "node apps/auth-service/src/swagger.js",
+    "user-ui": "npx nx run-many --target=dev --all --projects=user-ui"
   },
   "private": true,
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -19,9 +21,14 @@
     "express-rate-limit": "^7.5.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
     "morgan": "^1.10.0",
+    "next": "~15.2.4",
     "nodemailer": "^7.0.3",
     "prisma": "^6.10.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.60.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   },
@@ -30,6 +37,7 @@
     "@nx/express": "^20.8.2",
     "@nx/jest": "20.8.2",
     "@nx/js": "20.8.2",
+    "@nx/next": "^20.8.2",
     "@nx/node": "20.8.2",
     "@nx/web": "20.8.2",
     "@nx/webpack": "20.8.2",
@@ -37,6 +45,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.36",
@@ -50,7 +59,10 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "~18.16.9",
     "@types/nodemailer": "^6.4.17",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@types/swagger-ui-express": "^4.1.8",
+    "autoprefixer": "10.4.13",
     "esbuild": "^0.19.2",
     "express-http-proxy": "^2.1.1",
     "i": "^0.3.7",
@@ -58,7 +70,9 @@
     "jest-environment-node": "^29.7.0",
     "npm": "^11.4.2",
     "nx": "20.8.2",
+    "postcss": "8.4.38",
     "react-refresh": "^0.10.0",
+    "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
