--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.5.2",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   },
