--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "ioredis": "^5.6.1",
+    "jotai": "^2.12.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "morgan": "^1.10.0",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "stripe": "^18.3.0",
+    "styled-components": "^6.1.19",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   },
