done-with-sellerui- product-service-Product-creation-UI

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "npx nx run-many --target=serve --all ",
+    "dev": "npx nx run-many --target=serve --all && run product-docs",
     "auth-docs": "node apps/auth-service/src/swagger.js",
+    "product-docs": "node apps/product-service/src/swagger.js",
     "user-ui": "npx nx run-many --target=dev --all --projects=user-ui",
     "seller-ui": "npx nx run-many --target=dev --all --projects=seller-ui"
   },
@@ -32,6 +33,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-quill-new": "^3.4.6",
     "stripe": "^18.3.0",
     "styled-components": "^6.1.19",
     "swagger-autogen": "^2.23.7",
