--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
+    "imagekit": "^6.0.0",
     "ioredis": "^5.6.1",
     "jotai": "^2.12.5",
     "jsonwebtoken": "^9.0.2",
