--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "private": true,
   "dependencies": {
+    "@imagekit/next": "^2.1.2",
     "@prisma/client": "^6.10.1",
     "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -28,6 +30,7 @@
     "lucide-react": "^0.525.0",
     "morgan": "^1.10.0",
     "next": "~15.2.4",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "prisma": "^6.10.1",
     "react": "19.0.0",
@@ -66,6 +69,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "~18.16.9",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
