done-with-user-ui-Product-Details-Page-Enhancements

--- a/apps/user-ui/tsconfig.json
+++ b/apps/user-ui/tsconfig.json
@@ -28,11 +28,13 @@
       ]
     },
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "../../",
     "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo"
   },
   "include": [
     "../../apps/user-ui/.next/types/**/*.ts",
+    "../../packages/**/*.tsx",
+    "../../packages/**/*.ts",
     "../../dist/apps/user-ui/.next/types/**/*.ts",
     "next-env.d.ts",
     "src/**/*.js",
