--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ioredis": "^5.6.1",
     "jotai": "^2.12.5",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "lucide-react": "^0.525.0",
     "morgan": "^1.10.0",
     "next": "~15.2.4",
@@ -37,6 +38,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-image-magnify": "^2.7.4",
     "react-quill-new": "^3.4.6",
     "stripe": "^18.3.0",
     "styled-components": "^6.1.19",
@@ -75,6 +77,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@types/react-image-magnify": "^2.7.4",
     "@types/swagger-ui-express": "^4.1.8",
     "autoprefixer": "10.4.13",
     "esbuild": "^0.19.2",
