done-with-user-ui-offers-and-shop-page

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hot-toast": "^2.5.2",
     "react-image-magnify": "^2.7.4",
     "react-quill-new": "^3.4.6",
+    "react-range": "^1.10.0",
     "stripe": "^18.3.0",
     "styled-components": "^6.1.19",
     "swagger-autogen": "^2.23.7",
