done-with-part-2

--- a/apps/order-service/tsconfig.app.json
+++ b/apps/order-service/tsconfig.app.json
@@ -10,7 +10,8 @@
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": [
-    "src/**/*.ts", "../../packages/**/*.ts"
+    "src/**/*.ts",
+    "../../packages/**/*.ts"
   ],
   "exclude": []
 }
