--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-image-magnify": "^2.7.4",
     "react-quill-new": "^3.4.6",
     "react-range": "^1.10.0",
+    "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "styled-components": "^6.1.19",
     "swagger-autogen": "^2.23.7",
