done-with-admin-ui--Admin-Dashboard-Login-Page-Setup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "auth-docs": "node apps/auth-service/src/swagger.js",
     "product-docs": "node apps/product-service/src/swagger.js",
     "user-ui": "npx nx run-many --target=dev --all --projects=user-ui",
-    "seller-ui": "npx nx run-many --target=dev --all --projects=seller-ui"
+    "seller-ui": "npx nx run-many --target=dev --all --projects=seller-ui",
+    "admin-ui": "npx nx run-many --target=dev --all --projects=admin-ui"
   },
   "private": true,
   "dependencies": {
