--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "npx nx run-many --target=serve --all && run product-docs",
+    "dev": "npx nx run-many --target=serve --all --maxParallel=10",
     "auth-docs": "node apps/auth-service/src/swagger.js",
     "product-docs": "node apps/product-service/src/swagger.js",
     "user-ui": "npx nx run-many --target=dev --all --projects=user-ui",
     "seller-ui": "npx nx run-many --target=dev --all --projects=seller-ui",
-    "admin-ui": "npx nx run-many --target=dev --all --projects=admin-ui"
+    "admin-ui": "npx nx run-many --target=dev --all --projects=admin-ui",
+    "postinstall": "patch-package"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,9 @@
     "@stripe/stripe-js": "^7.5.0",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-table": "^8.21.3",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/react-simple-maps": "^3.0.6",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "canvas-confetti": "^1.9.3",
@@ -26,7 +30,9 @@
     "dotenv": "^17.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-rate-limit": "^7.5.1",
+    "express-rate-limit": "^8.0.1",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.6",
     "imagekit": "^6.0.0",
     "ioredis": "^5.6.1",
     "jotai": "^2.12.5",
@@ -38,13 +44,16 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "prisma": "^6.10.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-image-magnify": "^2.7.4",
     "react-quill-new": "^3.4.6",
     "react-range": "^1.10.0",
+    "react-simple-maps": "^3.0.0",
+    "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "styled-components": "^6.1.19",
@@ -94,6 +103,7 @@
     "jest-environment-node": "^29.7.0",
     "npm": "^11.4.2",
     "nx": "20.8.2",
+    "patch-package": "^8.0.0",
     "postcss": "8.4.38",
     "react-refresh": "^0.10.0",
     "tailwindcss": "3.4.3",
