done-with-admin-ui--Admin-Dashboard-Full-UI-and-Feature-Integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,12 @@
     },
     {
       "path": "./apps/recommendation-service"
+    },
+    {
+      "path": "./apps/chatting-service"
+    },
+    {
+      "path": "./apps/logger-service"
     }
   ]
 }
