--- a/apps/chatting-service/tsconfig.app.json
+++ b/apps/chatting-service/tsconfig.app.json
@@ -6,11 +6,11 @@
       "node",
       "express"
     ],
-    "rootDir": "src",
+    "rootDir": "../../",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts", "../../packages/**/*.ts"
   ],
   "exclude": []
 }
