--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL=mongodb+srv://yuvrajpatil12092004:3vn9LbllAf4hwurX@ecommerce.ue5vvxj.mongodb.net/development
-REDIS_HOST="internal-chamois-41223.upstash.io"
+REDIS_HOST="sought-martin-14608.upstash.io"
 REDIS_PORT="6379"
-REDIS_PASSWORD="AaEHAAIjcDFkMTA2Y2M3YjBiYzQ0NmViYWFhNTQ1OWIxYWFjODUxZXAxMA"
+REDIS_PASSWORD="ATkQAAIjcDEwM2Q3OWEyOWEzZmE0YzgxYjY0MmZiOWI1ZmY2YmNkMnAxMA"
 
 SMTP_USER="yuvrajpatil12092004@gmail.com"
 SMTP_PASS="swpa gcid pfem ulhj"
@@ -9,7 +9,7 @@ SMTP_PORT=465
 SMTP_SERVICE=gmail
 SMTP_HOST=smtp.gamil.com
 
-REDIS_DATABASE_URI="rediss://default:AaEHAAIjcDFkMTA2Y2M3YjBiYzQ0NmViYWFhNTQ1OWIxYWFjODUxZXAxMA@internal-chamois-41223.upstash.io:6379"
+REDIS_DATABASE_URI="rediss://default:ATkQAAIjcDEwM2Q3OWEyOWEzZmE0YzgxYjY0MmZiOWI1ZmY2YmNkMnAxMA@sought-martin-14608.upstash.io:6379"
 
 ACCESS_TOKEN_SECRET="8688a93c"
 REFRESH_TOKEN_SECRET="9454bf28"
